# tv-commercial-detection

./: .env  .gitignore  AGENTS.md  background.js  docker-compose.yml  example.env  main.js  manifest.json  popup.js  todo.md  todo_archive.md  todo_next_steps.md
.github/prompts/: fix-failing-tests.prompt.md  plan-classificationProfiles.prompt.md  plan-fixVideoTracking-idea-for-later.prompt.md  plan-frameFlaggingModalPopupPart1.prompt.md  plan-moveImagesToSubdirs.prompt.md  plan-packageRestructureLintingTests.prompt.md  plan-phashOverrideAndFrameFlaggingPopup.prompt.md  plan-phashOverrideBackendPart2.prompt.md
browser_extension/: background.js  manifest.json  popup.html  popup.js
browser_extension/content_scripts/: get_video_bounds.js  track_interactions.js
content_scripts/: get_video_bounds.js
native_host/: audio_capture.py  com.tvdetector.audio_capture.json  install.sh  run
server/: .gitignore  Dockerfile  check_classification.py  check_classification.sh  classify.py  config.json  config.py  docker-compose.yml  frame_saver.py  main.py  matrix.py  pyproject.toml  state.py
server/classification/: logo_match.py  rectangle_match.py
server/prompt/: prompt.txt
server/routes/: receive.py  review.py  status.py  trigger_matrix.py
server/scripts/: find_dupes.py  get_image_descriptions.py  process_classification_results.sql  view_classification_results.py
server/src/tv_commercial_detector/: classify.py  config.py  frame_saver.py  main.py  matrix.py  phash_override.py  state.py
server/src/tv_commercial_detector/classification/: llm_match.py  logo_match.py  rectangle_match.py  result.py
server/src/tv_commercial_detector/classifiers/: nascar_on_fox.py  nhra_on_fox.py
server/src/tv_commercial_detector/prompt/: prompt.txt  prompt_json.txt
server/src/tv_commercial_detector/routes/: receive.py  review.py  status.py  trigger_matrix.py
server/src/tv_commercial_detector/templates/: is_ad.html  review.html
server/templates/: is_ad.html  review.html
server/tests/: conftest.py  test_classify.py  test_config.py  test_phash_override.py  test_state.py
server/tests/classification/: test_logo_match.py  test_rectangle_match.py
server/tests/classifiers/: test_nascar_on_fox.py
server/tests/integration/: test_check_classification.py
server/tests/routes/: test_classifier_profile.py  test_receive.py  test_review.py  test_status.py  test_trigger_matrix.py
