[project]
name = "tv-commercial-detector-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "openai>=2.26.0",
    "pillow>=12.1.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "classify",
    "state",
    "matrix",
]
packages = ["routes"]