[project]
name = "tv-commercial-detector-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.0",
    "openai>=2.26.0",
    "pillow>=12.1.1",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "classify",
    "config",
    "state",
    "matrix",
    "metrics",
]
packages = ["routes"]
